--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -14,6 +14,19 @@
                 Forma de Pagamento
             </a>
             
+            <a mat-list-item routerLink="/pecas">
+                <i class="material-icons">
+                    build
+                </i>
+                Peças
+            </a>
+
+            <a mat-list-item routerLink="/clientes">
+                <i class="material-icons">
+                    person
+                </i>
+                Clientes
+            </a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="content">
